Convert Risk Values to High, Med, Low 	modified:   home/templates/pop_biom.html 	modified:   home/views.py

--- a/home/templates/pop_biom.html
+++ b/home/templates/pop_biom.html
@@ -133,10 +133,12 @@
               <div id="engaged_risk_text" style="display: inline-block;" class="div-size-big">
 	      </div>
               <div id="participant_risk" class="side-by-side div-size-big" style="margin-right: 5px;">
+		<div class="figure_l figure_title">Participant Risk</div>
                 <img src="static/dimages/participant_risk.png" />
 	      </div>
-              <div id="engaged_risk" style="display: inline-block;" class="div-size-big">
-                <img src="static/dimages/engaged_risk.png" />
+              <div id="engaged_risk" style="display: inline-block;" >
+		<div class="figure_l figure_title">Engaged Risk</div>
+                <div><img src="static/dimages/engaged_risk.png" /></div>
 	      </div>
               <h4>CHANGES IN RISK</h4>
               <p>Engagement resulted in <b>X%</b> of the population moving to a lower risk level in the last <b>3 years</b></p>
