--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -36,12 +36,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-    {% if hm_flag %}
-          <a class="navbar-brand" href="/"><img width="160" height="30" src="/static/images/hsirx_logo.png?version={{ version }}" ></a>
-    {% else %}
+	  {% if logo %}
+          <a class="navbar-brand" href="/"><img width="160" height="30" src="{{ logo }}?version={{ version }}" ></a>
+	  {% else %}
           <a class="navbar-brand" href="/"><img width="160" height="30" src="/static/images/logo-blue-transparent.png?version={{ version }}" ></a>
-    {% endif %}
-            <ul class="nav">
+	  {% endif %}
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav" style="padding-top: 6px;">
