Including initial code for sankey diagrams 	modified:   home/hsirx_fixtures.py 	modified:   home/templates/pop_biom.html 	modified:   home/views.py 	modified:   static/css/zakipoint.css 	new file:   static/images/affiliated-physicians-logo.jpg

--- a/home/templates/pop_biom.html
+++ b/home/templates/pop_biom.html
@@ -5,7 +5,7 @@
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="/static/js/barchart.js"> </script>
   <!-- Please make sure jQuery is also loaded. -->
-
+  
   <div class="container">
     <div class="row">
       <div class="col-md-12"><div style="text-align:center; display:block;">
@@ -138,11 +138,9 @@
 	      -->
               <div id="participant_risk" class="side-by-side div-size-big" style="margin-right: 5px;">
 		<!-- <div class="figure_l figure_title">Participant Risk</div> -->
-                <img src="static/dimages/participant_risk.png" />
 	      </div>
               <div id="engaged_risk" style="display: inline-block;" >
 		<!-- <div class="figure_l figure_title">Engaged Risk</div> -->
-                <div><img src="static/dimages/engaged_risk.png" /></div>
 	      </div>
               <h4>CHANGES IN RISK</h4>
               <p>Engagement resulted in <b>X%</b> of the population moving to a lower risk level in the last <b>3 years</b></p>
@@ -502,12 +500,254 @@
 
       $.post('/rpc/1/home/', {'func': 'risk_participating', 'args': JSON.stringify([])}, function(data) {
           /* $("#participant_risk_text").html(data); */
+
+          var title = "Participant Risk";
+
+          var loc = "#participant_risk";
+
+          var margin = {top: 80, right: 100, bottom: 50, left: 80},
+              width = 400 - margin.left - margin.right,
+              height = 400 - margin.top - margin.bottom;
+
+          var parseDate = d3.time.format("%Y").parse;
+
+          var x = d3.time.scale()
+              .range([0, width]);
+
+          var y = d3.scale.linear()
+              .range([height-50, 0]);
+
+          var color = d3.scale.ordinal().range(["steelblue", "#BDBDBD", "#F78181"]);
+
+          var xAxis = d3.svg.axis()
+              .scale(x)
+              .ticks(d3.time.year, 1)
+              .orient("bottom");
+
+          var line = d3.svg.line()
+              .x(function(d) { return x(+d.Year); })
+              .y(function(d) { return y(d.count); });
+
+          var svg = d3.select(loc).append("svg")
+              .attr("width", width + margin.left + margin.right)
+              .attr("height", height + margin.top + margin.bottom)
+            .append("g")
+              .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+          data = JSON.parse(data);
+
+          color.domain(d3.keys(data[0]).filter(function(key) { return key !== "Year"; }));
+
+          $.each(data, function(i, d) {
+            d.Year = parseDate(d.Year);
+          });
+
+          var risks = color.domain().map(function(name) {
+            return {
+              name: name,
+              counts: data.map(function(d) {
+                return {Year: d.Year, count: +d[name]};
+              })
+            };
+          });
+
+          $.each(risks, function(i, d){
+            d.counts = d.counts.sort(function(a, b) { 
+              if (a.Year > b.Year) return 1;
+              if (a.Year < b.Year) return -1;
+              return 0;
+            });
+          });
+
+          x.domain(d3.extent(data, function(d) { return +d.Year; }));
+
+          y.domain([
+            d3.min(risks, function(c) { return d3.min(c.counts, function(v) { return v.count; }); }),
+            d3.max(risks, function(c) { return d3.max(c.counts, function(v) { return v.count; }); })
+          ]);
+
+          svg.append("g")
+              .attr("class", "x axis")
+              .attr("transform", "translate(0," + height + ")")
+              .call(xAxis);
+
+          var risk = svg.selectAll(".risk")
+              .data(risks)
+            .enter().append("g")
+              .attr("class", "risk");
+
+          risk.append("path")
+              .attr("class", "line")
+              .attr("d", function(d) { return line(d.counts); })
+              .style("stroke", function(d) { return color(d.name); });
+
+          risk.append("text")
+              .datum(function(d) { return {name: d.name, value: d.counts[d.counts.length - 1]}; })
+              .attr("transform", function(d) { return "translate(" + x(+d.value.Year) + "," + y(d.value.count) + ")"; })
+              .attr("x", 3)
+              .attr("dx", "2.5em")
+              .attr("dy", ".35em")
+              .attr("fill", function(d) { return color(d.name); })
+              .text(function(d) { return d.name; });
+
+          for (var ind = risks[0].counts.length - 1; ind >= 0; ind--) {
+
+            risk.append("rect")
+              .datum(function(d) { return {name: d.name, value: d.counts[ind]}; })
+              .attr("transform", function(d) { return "translate(" + x(+d.value.Year) + "," + y(d.value.count) + ")"; })
+              .attr("x", -20)
+              .attr("y", -8)
+              .attr("width", 40)
+              .attr("height", 16)
+              .style("opacity", 1)
+              .style("fill", "white");
+
+            risk.append("text")
+              .datum(function(d) { return {name: d.name, value: d.counts[ind]}; })
+              .attr("transform", function(d) { return "translate(" + x(+d.value.Year) + "," + y(d.value.count) + ")"; })
+              .attr("x", 3)
+              .attr("dx", "-1em")
+              .attr("dy", "0em")
+              .attr("fill", function(d) { return color(d.name); })
+              .text(function(d) { return d.value.count+'%'; });
+          };
+
+          svg.append("text")
+              .text(title)
+              .attr("x", width/2)
+              .attr("y", 0)
+              .style("font-size", "1.9em")
+              .attr("dx", "-2.5em")
+              .attr("dy", "-2em");
+
         }).fail(function() {
           /* $("#participant_risk_text").html('Error with risk_participating'); */
         });
 
       $.post('/rpc/1/home/', {'func': 'risk_engaged', 'args': JSON.stringify([])}, function(data) {
           /* $("#engaged_risk_text").html(data); */
+
+          console.log(data);
+
+          var title = "Engaged Risk";
+
+          var loc = "#engaged_risk";
+
+          var margin = {top: 80, right: 100, bottom: 50, left: 80},
+              width = 400 - margin.left - margin.right,
+              height = 400 - margin.top - margin.bottom;
+
+          var parseDate = d3.time.format("%Y").parse;
+
+          var x = d3.time.scale()
+              .range([0, width]);
+
+          var y = d3.scale.linear()
+              .range([height-50, 0]);
+
+          var color = d3.scale.ordinal().range(["steelblue", "#BDBDBD", "#F78181"]);
+
+          var xAxis = d3.svg.axis()
+              .scale(x)
+              .ticks(d3.time.year, 1)
+              .orient("bottom");
+
+          var line = d3.svg.line()
+              .x(function(d) { return x(+d.Year); })
+              .y(function(d) { return y(d.count); });
+
+          var svg = d3.select(loc).append("svg")
+              .attr("width", width + margin.left + margin.right)
+              .attr("height", height + margin.top + margin.bottom)
+            .append("g")
+              .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+          data = JSON.parse(data);
+
+          color.domain(d3.keys(data[0]).filter(function(key) { return key !== "Year"; }));
+
+          $.each(data, function(i, d) {
+            d.Year = parseDate(d.Year);
+          });
+
+          var risks = color.domain().map(function(name) {
+            return {
+              name: name,
+              counts: data.map(function(d) {
+                return {Year: d.Year, count: +d[name]};
+              })
+            };
+          });
+
+          $.each(risks, function(i, d){
+            d.counts = d.counts.sort(function(a, b) { 
+              if (a.Year > b.Year) return 1;
+              if (a.Year < b.Year) return -1;
+              return 0;
+            });
+          });
+
+          x.domain(d3.extent(data, function(d) { return +d.Year; }));
+
+          y.domain([
+            d3.min(risks, function(c) { return d3.min(c.counts, function(v) { return v.count; }); }),
+            d3.max(risks, function(c) { return d3.max(c.counts, function(v) { return v.count; }); })
+          ]);
+
+          svg.append("g")
+              .attr("class", "x axis")
+              .attr("transform", "translate(0," + height + ")")
+              .call(xAxis);
+
+          var risk = svg.selectAll(".risk")
+              .data(risks)
+            .enter().append("g")
+              .attr("class", "risk");
+
+          risk.append("path")
+              .attr("class", "line")
+              .attr("d", function(d) { return line(d.counts); })
+              .style("stroke", function(d) { return color(d.name); });
+
+          risk.append("text")
+              .datum(function(d) { return {name: d.name, value: d.counts[d.counts.length - 1]}; })
+              .attr("transform", function(d) { return "translate(" + x(+d.value.Year) + "," + y(d.value.count) + ")"; })
+              .attr("x", 3)
+              .attr("dx", "2.5em")
+              .attr("dy", ".35em")
+              .attr("fill", function(d) { return color(d.name); })
+              .text(function(d) { return d.name; });
+
+          for (var ind = risks[0].counts.length - 1; ind >= 0; ind--) {
+
+            risk.append("rect")
+              .datum(function(d) { return {name: d.name, value: d.counts[ind]}; })
+              .attr("transform", function(d) { return "translate(" + x(+d.value.Year) + "," + y(d.value.count) + ")"; })
+              .attr("x", -20)
+              .attr("y", -8)
+              .attr("width", 40)
+              .attr("height", 16)
+              .style("opacity", 1)
+              .style("fill", "white");
+
+            risk.append("text")
+              .datum(function(d) { return {name: d.name, value: d.counts[ind]}; })
+              .attr("transform", function(d) { return "translate(" + x(+d.value.Year) + "," + y(d.value.count) + ")"; })
+              .attr("x", 3)
+              .attr("dx", "-1em")
+              .attr("dy", "0em")
+              .attr("fill", function(d) { return color(d.name); })
+              .text(function(d) { return d.value.count+'%'; });
+          };
+
+          svg.append("text")
+              .text(title)
+              .attr("x", width/2)
+              .attr("y", 0)
+              .style("font-size", "1.9em")
+              .attr("dx", "-2.5em")
+              .attr("dy", "-2em");
+
         }).fail(function() {
           /* $("#engaged_risk_text").html('Error with risk_engaged'); */
         });
@@ -537,8 +777,6 @@
 
         $.post('/rpc/1/home/', {'func': 'participating', 'args': JSON.stringify([])}, function(data) {
           $("#participating").html(data);
-
-          console.log(data);
           
           var participated = JSON.parse(data);
           data = eligible;
@@ -636,8 +874,6 @@
 
         $.post('/rpc/1/home/', {'func': 'engaged', 'args': JSON.stringify([])}, function(data) {
           $("#engaged").html(data);
-
-          console.log(data);
           
           var engaged = JSON.parse(data);
           data = eligible;
@@ -1035,7 +1271,7 @@
 
           data = JSON.parse(data);
           color.domain(d3.keys(data[0]).filter(function(key) { return key !== "Year"; }));
-          console.log(data);
+
           $.each(data, function(i, d) {
             var y0 = 0;
             d.claims = color.domain().map(function(level) { return {level: level, y0: y0, y1: y0 += +d[level]}; });
