--- a/static/css/zakipoint.css
+++ b/static/css/zakipoint.css
@@ -164,3 +164,22 @@ h3 {
 .figure_l {
     width: 400px;
 }
+
+/* For pop_biom page.
+----------------------------------------------------- */
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.x.axis path {
+  display: none;
+}
+
+.line {
+  fill: none;
+  stroke: steelblue;
+  stroke-width: 1.5px;
+}
